@@ -1,8 +1,10 @@
-CHANGES.txt - 2006-04-14
+CHANGES.txt - 2006-04-17
 ------------------------
 
 CHANGES IN CUPS V1.2rc3
 
+	- "make install" now installs the MIME files with world
+	  read permissions (STR #1565)
 	- More CDSA encryption support fixes (STR #1563)
 	- Updated the default mime.types file to support printing
 	  of files that do not have a locally-recognized MIME
